--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,16 @@
     <title>Document</title>
 </head>
 <body>
+    <img src="1034bc_c247ec916a1a4b8e915cfea61e4f1fcb~mv2.png" alt="restaurant icon" width="100%">
     <h1>Delicious Bites Contact :</h1>
-    <address>Dbites@yahoo.tn / Tunis Center</address>
+    <table border="1">
+        <tr>
+            <th>Our Email :</th><th>Tel Number For Reservations</th><th>Facebook Account</th><th>Franchises</th>
+        </tr>
+        <tr>
+            <td>Dbites@yahoo.tn</td><td>72 312 654</td><td>Delicious_Bites </td><td>Boumhal/Ezzahra/Tunis/Lac 1 /Marsa</td>
+        </tr>
+    </table>
+    <h2>One Bite, Infinite Delights. Unleash Your Cravings, One Treat at a Time. Irresistibly Tasty, Unforgettable Flavors. Discover Edible Delights, Create Memories.</h2>
 </body>
 </html>
